# fizz

./: .env.example  AGENTS.md  Cargo.toml  README.md  compose.yaml
.github/workflows/: ci.yml
docs/: sandboxing-plan.md
scripts/: install.sh
src/: config.rs  lib.rs  logging.rs  main.rs  model.rs  model_gateway.rs  repl.rs
src/agent/: mod.rs  tools.rs
src/providers/: http_errors.rs  mod.rs  ollama.rs
tests/: logging_integration.rs
